<resources>
    <string name="app_name">Example Github Repository App</string>
    <string name="enter_search">Results empty, please enter a search query above</string>

    <string name="repository_name">Name</string>
    <string name="repository_description">Description</string>
    <string name="is_private">Is private</string>
    <string name="github_link">Github link</string>
    <string name="date_created">Date created</string>
    <string name="date_updated">Date updated</string>
    <string name="language">Language</string>
    <string name="number_of_forks">Number of forks</string>
    <string name="open_issues">Open issues</string>
    <string name="readme_link">ReadMe</string>
    <string name="view_readme">View readMe</string>
    <string name="fetching_readme">Fetching readMe</string>
    <string name="no_data">No data</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>